# rx

./: .gitattributes  .gitignore  .gitmodules  CLOUDSCAPE.md  CMakeLists.txt  CMakePresets.json  EMBEDDING.md  PLACEMENT.md  PROCEDURAL_GRASS.md  RCGI.md  README.md  SDF_TRACE.md  WEATHER.md  flake.nix  vkd3d-proton.cache  vkd3d-proton.cache.write
apps/editor/: CMakeLists.txt  editor_app.cc  editor_app.h  editor_input.cc  editor_input.h  editor_terrain.cc  editor_ui.cc  fly_camera.cc  fly_camera.h  main.cc  ugui_backend.cc  ugui_backend.h  ugui_platform.cc  ugui_platform.h
apps/editor/ui/: editor.ugui
engine/anim/: CMakeLists.txt  anim_graph.cc  anim_graph.h  anim_internal.h  expression.cc  expression.h  foot_ik.cc  foot_ik.h  foot_placement.cc  foot_placement.h  locomotion.cc  locomotion.h  morph.cc  morph.h  pose.cc  pose.h  rig_player.cc  rig_player.h
engine/app/: CMakeLists.txt  README.md  application.h  host.cc  host.h  services.h
engine/asset/: CMakeLists.txt  asset_database.cc  asset_database.h  asset_id.h  gltf_loader.cc  gltf_loader.h  material.h  materialx.cc  materialx.h  mesh.h  pack.cc  pack.h  primitives.cc  primitives.h  simplify.cc  simplify.h  skeleton.h  subdivide.cc  subdivide.h  texture.h  vfs.cc  vfs.h
engine/audio/: CMakeLists.txt  audio_clip.cc  audio_clip.h  audio_device.cc  audio_device.h  audio_system.cc  audio_system.h  aux_synth.cc  aux_synth.h  engine_synth.cc  engine_synth.h  ffmpeg_codec.cc  ffmpeg_codec.h  ffmpeg_stub.cc  mixer.cc  mixer.h  spatial.h  synth_voice.cc  synth_voice.h  thunder_synth.cc  thunder_synth.h  vehicle_audio.cc  vehicle_audio.h  wav.cc  wav.h  xwma.cc  xwma.h
engine/character/: CMakeLists.txt  README.md  character.cc  character.h  jetpack.cc  jetpack.h
engine/core/: CMakeLists.txt  export.h  feature_registry.cc  feature_registry.h  features.def  frame_timer.cc  frame_timer.h  input.h  input_actions.h  input_bindings.cc  input_bindings.h  job_system.cc  job_system.h  log.cc  log.h  math.h  mimalloc_override.cc  move_only_function.h  types.h  wayland_kde_hdr.cc  wayland_kde_hdr.h  window.cc  window.h  window_android.cc  window_sdl3.cc  world_clock.cc  world_clock.h
engine/core/memory/: chunk_pool.cc  chunk_pool.h  frame_arena.cc  frame_arena.h  memory_config.cc  memory_config.h  memory_tracker.cc  memory_tracker.h  new_override.cc  small_vector.h
engine/edit/: CMakeLists.txt  hierarchy.cc  hierarchy.h  reflect.cc  reflect.h  scene_io.cc  scene_io.h  selection.cc  selection.h  undo.cc  undo.h
engine/inventory/: CMakeLists.txt  README.md  byte_io.h  components.h  export.h  inventory.cc  inventory.h  item_catalog.cc  item_catalog.h  serialize.cc  serialize.h  world_item.cc  world_item.h
engine/locomotion/: CMakeLists.txt  controller.cc  controller.h  estimator.cc  estimator.h  footstep.cc  footstep.h  gait.cc  gait.h  internal_math.h  rig.cc  rig.h  types.h  whole_body.cc  whole_body.h
engine/nav/: CMakeLists.txt  agent.cc  agent.h  nav_debug.cc  nav_debug.h  navmesh.cc  navmesh.h  path.cc  path.h  query.cc  query.h
engine/net/: CMakeLists.txt  bubble.cc  bubble.h  bubble_debug.cc  bubble_debug.h  protocol.cc  protocol.h  replication.cc  replication.h  rpc_channel.cc  rpc_channel.h  session.cc  session.h  wire.h  znet_util.h
engine/net/shaders/: bubble_wire.ps.hlsl  bubble_wire.vs.hlsl
engine/physics/: CMakeLists.txt  README.md  aircraft.cc  aircraft.h  boat.cc  boat.h  boat_profiles.cc  boat_profiles.h  cloth.h  cloth_collision.cc  cloth_collision.h  kinema_jolt.cc  kite.cc  kite.h  physics_world.cc  physics_world.h  physics_world_stub.cc  shape_desc.h  vehicle_profiles.cc  vehicle_profiles.h  water_waves.h
engine/placement/: CMakeLists.txt  PATTERN.md  density_program.cc  density_program.h  ecotope.h  gpu_placement.cc  gpu_placement.h  pattern_gen.cc  placement.cc  placement.h  placement_math.h  placement_pattern.h  world_data.cc  world_data.h
engine/placement/shaders/: placement_common.hlsli  placement_density.cs.hlsl  placement_generate.cs.hlsl  placement_transform.cs.hlsl
engine/render/: CMakeLists.txt  PROVIDERS.md  README.md  RHI.md
engine/render/atmosphere/: aerial_perspective.cc  aerial_perspective.h  clouds.cc  clouds.h  cloudscape.cc  cloudscape.h  cloudscape_textures.cc  cloudscape_textures.h  cloudscape_types.h  environment.cc  environment.h  froxel_fog.cc  froxel_fog.h  lightning.cc  lightning.h  lightning_envelope.h  ltc_tables.h  precip_occlusion.cc  precip_occlusion.h  precip_volume.cc  precip_volume.h  precipitation.cc  precipitation.h  surface_weather.cc  (+3 more)
engine/render2d/: CMakeLists.txt  camera2d.h  iso.h  sprite_renderer.cc  sprite_renderer.h  tile_map.cc  tile_map.h  types2d.h
engine/scene/: CMakeLists.txt  camera.cc  camera.h  camera_rig.cc  camera_rig.h  components.h  scene_handlers.cc  scene_handlers.h  world_streaming.cc  world_streaming.h  world_streaming_ecs.h
engine/script/: CMakeLists.txt  handler_context.h  handler_registry.cc  handler_registry.h  script_arena.cc  script_arena.h  script_string.cc  script_string.h  script_symbols.cc  script_symbols.h  script_value.cc  script_value.h
engine/weather/: CMakeLists.txt  weather.cc  weather.h
libs/kinema/: CMakeLists.txt  README.md
runtime/: CMakeLists.txt  SHIP_DEMO.md  camera_input.cc  debug_ui.cc  debug_ui.h  demo_drive.cc  demo_drive.h  demo_grass.cc  demo_grass.h  demo_gym.cc  demo_gym.h  demo_nav.cc  demo_nav.h  demo_placement.cc  demo_placement.h  demo_puppet.cc  demo_puppet.h  demo_scenes.cc  demo_scenes.h  demo_ship.cc  demo_ship.h  engine.cc  engine.h  engine_context.h  fly_camera.h  frame_loop.cc  main.cc  placement_demo_assets.cc  placement_demo_assets.h  scene_hook_demo.cc  scene_hook_demo.h  scene_hook_rhi_demo.cc  scene_hook_rhi_demo.h  showcase_camera.cc  showcase_camera.h  viewer.cc  viewer.h  viewer_input.cc  viewer_input.h
runtime/feature_gym/: README.md  feature_gym.cc  feature_gym.h  generate_assets.py
runtime/shaders/: scenehook.ps.hlsl  scenehook.vs.hlsl  scenehook_cull.cs.hlsl  scenehook_rhi.ms.hlsl  scenehook_rhi.ps.hlsl  scenehook_rhi.vs.hlsl  scenehook_rhi_cull.cs.hlsl
(+452 files in other folders)
